work in parsing for state info and fix some layout issues

--- a/htmljs/src/styles/style.scss
+++ b/htmljs/src/styles/style.scss
@@ -105,12 +105,32 @@ $filtersg-color: #000abb;
 	.descriptor {
 	}
 	.heading {
-		text-transform: uppercase;
+		border-bottom: 1px solid rgba(0,0,0,0.64);
 		padding-top: 8px;
 		padding-bottom: 4px;
 		margin-bottom: 4px;
-		display: block;
-		border-bottom: 1px solid rgba(0,0,0,0.64);
+		strong {
+			text-transform: uppercase;
+			display: inline-block;
+		}
+		#lcdControlState:empty + .for {
+			display: none;
+		}
+	}
+}
+
+/** Error **/
+.error {
+	position: fixed;
+	left: 20px;
+	bottom: 50px;
+	background-color: #323232;
+	padding: 12px 24px 17px 24px;
+	vertical-align: middle;
+	color: #fff;
+	box-shadow: 0 7px 18px rgba(0,0,0,0.2);
+	&:empty {
+		display: none;
 	}
 }
 
@@ -136,17 +156,14 @@ $filtersg-color: #000abb;
 	margin: 0;
 	outline: 0;
 	top: 50%;
-	-ms-transform: translate(0, -50%);
-	-webkit-transform: translate(0, -50%);
 	transform: translate(0, -50%);
-	-webkit-transition: all 0.3s ease;
 	transition: all 0.3s ease;
 }
 .switch-label:before {
 	left: 1px;
 	width: 34px;
 	height: 14px;
-	background-color: #9E9E9E;
+	background-color: #DDD;
 	border-radius: 8px;
 }
 .switch-label:after {
@@ -156,9 +173,6 @@ $filtersg-color: #000abb;
 	background-color: #FAFAFA;
 	border-radius: 50%;
 	box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.14), 0 2px 2px 0 rgba(0, 0, 0, 0.098), 0 1px 5px 0 rgba(0, 0, 0, 0.084);
-}
-.switch-input:checked + .switch-label:before {
-	// background-color: #A5D6A7;
 }
 .switch-input:checked + .switch-label:after {
 	background-color: #4CAF50;
@@ -250,24 +264,24 @@ $filtersg-color: #000abb;
 /** Buttons **/
 
 .btn {
-    display: inline-block;
-    position: relative;
-    cursor: pointer;
-    height: 35px;
-    line-height: 35px;
-    padding: 0 1.5rem;
-    font-size: 15px;
-    font-weight: 600;
-    letter-spacing: .8px;
-    text-align: center;
-    text-transform: uppercase;
-    vertical-align: middle;
-    white-space: nowrap;
-    outline: none;
-    border: none;
-    user-select: none;
-    transition: all .3s ease-out;
-		background-color: transparent;
+	display: inline-block;
+	position: relative;
+	cursor: pointer;
+	height: 35px;
+	line-height: 35px;
+	padding: 0 1.5rem;
+	font-size: 15px;
+	font-weight: 600;
+	letter-spacing: .8px;
+	text-align: center;
+	text-transform: uppercase;
+	vertical-align: middle;
+	white-space: nowrap;
+	outline: none;
+	border: none;
+	user-select: none;
+	transition: all .3s ease-out;
+	background-color: transparent;
 }
 
 .btn--primary {
@@ -305,4 +319,8 @@ $filtersg-color: #000abb;
 	transition: all 0.25s cubic-bezier(0.23, 1, 0.32, 1);
 	max-width: 600px;
 	padding: 1.2rem;
+}
+
+.hide {
+	display: none!important;
 }
